--- a/Mir/1_geospatial_analysis.ipynb
+++ b/Mir/1_geospatial_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
        "[1 rows x 122 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
        "4      US  North America                  Ohio  trump_df  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
        "[5 rows x 123 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -924,6 +924,8 @@
     "cbar = fig.colorbar(sm, ax=ax, shrink= 0.9)\n",
     "cbar.set_label(\"Likes\")\n",
     "\n",
+    "\n",
+    "plt.savefig(\"Figure/2_likes_trump\", dpi= 300, bbox_inches= 'tight')\n",
     "# Show the plot\n",
     "plt.show()"
    ]
@@ -937,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -983,6 +985,8 @@
     "cbar = fig.colorbar(sm, ax=ax, shrink= 0.9)\n",
     "cbar.set_label(\"Likes\")\n",
     "\n",
+    "plt.savefig(\"Figure/3_likes_biden\", dpi= 300, bbox_inches= 'tight')\n",
+    "\n",
     "# Show the plot\n",
     "plt.show()"
    ]
@@ -996,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1018,7 @@
        "4162.0"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1026,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
