--- a/Mir/twitter_updated.ipynb
+++ b/Mir/twitter_updated.ipynb
@@ -2179,7 +2179,7 @@
    ],
    "source": [
     "# Filter for English tweets\n",
-    "english_tweets = both_data[both_data['detected_language'] == 'en']\n",
+    "english_tweets = both_data[both_data['detected_language'] == 'en'z]\n",
     "\n",
     "# Check the number of English tweets\n",
     "print(f'Total English Tweets: {len(english_tweets)}')"
