Working on prediction modelling

--- a/Mir/1_1_time_series_TrendAnalysis.ipynb
+++ b/Mir/1_1_time_series_TrendAnalysis.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The objective is to conduct Linear Trend and Mann-Kendall Trend Analysis for daily retweets and likes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 94,
    "metadata": {},
