--- a/Mir/4_sentiment_analysis_classification_ML.ipynb
+++ b/Mir/4_sentiment_analysis_classification_ML.ipynb
@@ -726,6 +726,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -751,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,9 +772,30 @@
     ")\n",
     "\n",
     "# TF-IDF Vectorization\n",
-    "vectorizer = TfidfVectorizer(max_features=5000, ngram_range=(1, 2))  # Use unigrams and bigrams\n",
+    "vectorizer = TfidfVectorizer(max_features=1000, ngram_range=(1, 2))  # Use unigrams and bigrams\n",
     "X_train_vec = vectorizer.fit_transform(X_train)\n",
     "X_test_vec = vectorizer.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<235143x1000 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 2118013 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_vec"
    ]
   },
   {
@@ -854,6 +882,13 @@
     "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred))\n",
     "print(\"\\nConfusion Matrix:\\n\", confusion_matrix(y_test, y_pred))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
